[package]
name = "bevy-test"
version = "0.1.0"
edition = "2021"
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[dependencies]
bevy = {version = "0.17.x", features = ["dynamic_linking", "trace", "bevy_dev_tools"]}
